# wasmCloud

./: Cargo.toml
.github/workflows/: examples-components.yml  examples-providers.yml  lint-conventional-commits.yml  mirror-docker-image.yml  provider.yml  secrets-nats-kv.yml  wash.yml  wasmcloud.yml  wit-wasmcloud-postgres.yml  wit-wasmcloud-secrets.yml
crates/component/src/wrappers/: http.rs
crates/core/src/: otel.rs
crates/host/src/: lib.rs
crates/host/src/wasmbus/: mod.rs
crates/provider-archive/: Cargo.toml
crates/provider-messaging-kafka/src/: lib.rs
crates/provider-sqldb-postgres/: Cargo.toml  README.md
crates/provider-sqldb-postgres/src/: bindings.rs  config.rs  lib.rs
crates/provider-sqldb-postgres/wit/: deps.toml  provider.wit
crates/provider-wit-bindgen/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/lattice-controller/: .gitignore
crates/runtime/: Cargo.toml
crates/secrets-types/src/: lib.rs
crates/wash/: Cargo.toml
crates/wash-cli/: Cargo.toml  build.rs
crates/wash-cli/src/: call.rs  dev.rs
crates/wash-cli/tests/: wash.rs  wash_call.rs  wash_dev.rs
crates/wash-lib/src/parser/: mod.rs
crates/wash-lib/tests/: plugins.rs
crates/wash/tests/: wash_call.rs
crates/wit-bindgen-wasmcloud/: Cargo.toml
crates/wit-bindgen-wasmcloud-provider-binary/: Cargo.toml
crates/wit-bindgen-wasmcloud/src/: lib.rs
src/: main.rs
tests/: blobstore-s3.rs  builtins.rs  example-rust-hello-world.rs  lattice-controller.rs
tests/common/: mod.rs
wit/postgres/wit/: query.wit
wit/wasmcloud/lattice-control/: lattice-control.wit
(+68 files in other folders)
