[package]
name = "wit-bindgen-wasmcloud"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = """
WIT-powered bindgen for wasmCloud actors and providers
"""

[dependencies]
wit-bindgen-wasmcloud-provider-binary = { workspace = true }